--- a/index.html
+++ b/index.html
@@ -88,34 +88,36 @@
       <div class="columns is-centered">
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">
-            STEP Planner: Constructing Cross-Hierarchical Subgoal Trees<br>
-            <span style="font-size: 0.8em; font-weight: normal;">as a Long-Term Task Embodied Agent Planner</span>
+            STEP Planner:<br>
+            <span style="font-size: 0.8em; font-weight: normal;"> Constructing Cross-Hierarchical Subgoal Trees as a Long-Term Task Embodied Agent Planner</span>
           </h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://keunhong.com">Keunhong Park</a><sup>1</sup>,</span>
+              <a href="https://step-planner.github.io/">Tianxing Zhou</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://utkarshsinha.com">Utkarsh Sinha</a><sup>2</sup>,</span>
+              <a href="https://step-planner.github.io/">Zhirui Wang</a><sup>1*</sup>,</span>
             <span class="author-block">
-              <a href="https://jonbarron.info">Jonathan T. Barron</a><sup>2</sup>,
+              <a href="https://step-planner.github.io/">Haojia Ao</a><sup>1*</sup>,
             </span>
             <span class="author-block">
-              <a href="http://sofienbouaziz.com">Sofien Bouaziz</a><sup>2</sup>,
+              <a href="https://step-planner.github.io/">Guangyan Chen</a><sup>1</sup>,
             </span>
             <span class="author-block">
-              <a href="https://www.danbgoldman.com">Dan B Goldman</a><sup>2</sup>,
+              <a href="https://step-planner.github.io/">Boyang Xing</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="https://homes.cs.washington.edu/~seitz/">Steven M. Seitz</a><sup>1,2</sup>,
+              <a href="https://step-planner.github.io/">Jingwen Cheng</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="http://www.ricardomartinbrualla.com">Ricardo Martin-Brualla</a><sup>2</sup>
+              <a href="https://step-planner.github.io/">Yufeng Yue</a><sup>1†</sup>
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>University of Washington,</span>
-            <span class="author-block"><sup>2</sup>Google Research</span>
+            <div style="margin-top: 0.5em;"><sup>†</sup> Corresponding author: Yufeng Yue(yueyufeng@bit.edu.cn)</div>
+            <div style="margin-top: 0.5em;"><sup>*</sup> Equal Contribution</div>
+            <span class="author-block"><sup>1</sup>School of Automation,Beijing Institute of Technology,</span>
+            <span class="author-block"><sup>2</sup>Shanghai Droid Robot Co.,Ltd.</span>
           </div>
 
           <div class="column has-text-centered">
