--- a/index.html
+++ b/index.html
@@ -183,18 +183,17 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
     <div class="hero-body">
-      <video id="teaser" autoplay muted loop playsinline height="100%">
-        <source src="./static/videos/iros.mp4"
-                type="video/mp4">
+      <video id="teaser" controls playsinline style="width: 100%; border-radius: 8px;">
+        <source src="./static/videos/iros.mp4" type="video/mp4">
+        Your browser does not support the video tag.
       </video>
-      <h2 class="subtitle has-text-centered">
-        <span class="dnerf">Nerfies</span> turns selfie videos from your phone into
-        free-viewpoint
-        portraits.
+      <h2 class="subtitle has-text-centered" style="margin-top: 1rem;">
+        <span style="color: #3273dc;">STEP Planner</span> 
       </h2>
     </div>
   </div>
 </section>
+
   
 
 <!--
