--- a/index.html
+++ b/index.html
@@ -203,59 +203,55 @@
 <section class="hero is-light is-small">
   <div class="hero-body">
     <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-steve">
-          <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/steve.mp4"
-                    type="video/mp4">
+      <div class="columns">
+        <div class="column is-3">
+          <video class="has-ratio" width="100%" controls muted loop playsinline>
+            <source src="./static/videos/Task1_1.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-chair-tp">
-          <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/chair-tp.mp4"
-                    type="video/mp4">
+        <div class="column is-3">
+          <video class="has-ratio" width="100%" controls muted loop playsinline>
+            <source src="./static/videos/Task22.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-shiba">
-          <video poster="" id="shiba" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/shiba.mp4"
-                    type="video/mp4">
+        <div class="column is-3">
+          <video class="has-ratio" width="100%" controls muted loop playsinline>
+            <source src="./static/videos/Task33.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-fullbody">
-          <video poster="" id="fullbody" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/fullbody.mp4"
-                    type="video/mp4">
+        <div class="column is-3">
+          <video class="has-ratio" width="100%" controls muted loop playsinline>
+            <source src="./static/videos/Task44.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-blueshirt">
-          <video poster="" id="blueshirt" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/blueshirt.mp4"
-                    type="video/mp4">
+      </div>
+
+      <div class="columns" style="margin-top: 2rem;">
+        <div class="column is-3">
+          <video class="has-ratio" width="100%" controls muted loop playsinline>
+            <source src="./static/videos/Task55.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-mask">
-          <video poster="" id="mask" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/mask.mp4"
-                    type="video/mp4">
+        <div class="column is-3">
+          <video class="has-ratio" width="100%" controls muted loop playsinline>
+            <source src="./static/videos/Task66.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-coffee">
-          <video poster="" id="coffee" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/coffee.mp4"
-                    type="video/mp4">
+        <div class="column is-3">
+          <video class="has-ratio" width="100%" controls muted loop playsinline>
+            <source src="./static/videos/Task77.mp4" type="video/mp4">
           </video>
         </div>
-        <div class="item item-toby">
-          <video poster="" id="toby" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/toby2.mp4"
-                    type="video/mp4">
+        <div class="column is-3">
+          <video class="has-ratio" width="100%" controls muted loop playsinline>
+            <source src="./static/videos/Task88.mp4" type="video/mp4">
           </video>
         </div>
       </div>
     </div>
   </div>
 </section>
+
 
 
 
