--- a/index.html
+++ b/index.html
@@ -251,46 +251,54 @@
       <div class="columns">
         <div class="column is-3">
           <video class="has-ratio" width="100%" controls muted loop playsinline>
-            <source src="./static/videos/Task1_1.mp4" type="video/mp4">
+            <source src="./static/videos/Task1.mp4" type="video/mp4">
           </video>
+          <h3 class="has-text-centered" style="margin-top: 0.5rem;">Put the apple in the bowl.</h3>
         </div>
         <div class="column is-3">
           <video class="has-ratio" width="100%" controls muted loop playsinline>
-            <source src="./static/videos/Task22.mp4" type="video/mp4">
+            <source src="./static/videos/Task2.mp4" type="video/mp4">
           </video>
+          <h3 class="has-text-centered" style="margin-top: 0.5rem;">Open the box and put coke on a plate.</h3>
         </div>
         <div class="column is-3">
           <video class="has-ratio" width="100%" controls muted loop playsinline>
-            <source src="./static/videos/Task33.mp4" type="video/mp4">
+            <source src="./static/videos/Task3.mp4" type="video/mp4">
           </video>
+          <h3 class="has-text-centered" style="margin-top: 0.5rem;">Put all the fruits on the plate.</h3>
         </div>
         <div class="column is-3">
           <video class="has-ratio" width="100%" controls muted loop playsinline>
-            <source src="./static/videos/Task44.mp4" type="video/mp4">
+            <source src="./static/videos/Task4.mp4" type="video/mp4">
           </video>
+          <h3 class="has-text-centered" style="margin-top: 0.5rem;">Put all tools in the drawer and food on the plate.</h3>
         </div>
       </div>
 
       <div class="columns" style="margin-top: 2rem;">
         <div class="column is-3">
           <video class="has-ratio" width="100%" controls muted loop playsinline>
-            <source src="./static/videos/Task55.mp4" type="video/mp4">
+            <source src="./static/videos/Task5.mp4" type="video/mp4">
           </video>
+          <h3 class="has-text-centered" style="margin-top: 0.5rem;">[UNSEEN]Put the banana in the bowl.</h3>
         </div>
         <div class="column is-3">
           <video class="has-ratio" width="100%" controls muted loop playsinline>
-            <source src="./static/videos/Task66.mp4" type="video/mp4">
+            <source src="./static/videos/Task6.mp4" type="video/mp4">
           </video>
+          <h3 class="has-text-centered" style="margin-top: 0.5rem;">[UNSEEN]Put the tape in the drawer.</h3>
         </div>
         <div class="column is-3">
           <video class="has-ratio" width="100%" controls muted loop playsinline>
-            <source src="./static/videos/Task77.mp4" type="video/mp4">
+            <source src="./static/videos/Task7.mp4" type="video/mp4">
           </video>
+          <h3 class="has-text-centered" style="margin-top: 0.5rem;">[UNSEEN]Put all the fruits on the plate.</h3>
         </div>
         <div class="column is-3">
           <video class="has-ratio" width="100%" controls muted loop playsinline>
             <source src="./static/videos/Task88.mp4" type="video/mp4">
           </video>
+          <h3 class="has-text-centered" style="margin-top: 0.5rem;">[UNSEEN]Put food on the plate and tool in the drawer.</h3>
         </div>
       </div>
     </div>
